# scrapVkData

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: schemas.py  scraper.py  scrapper.py
