[tool.poetry]
name = "scrap_vk_data"
version = "0.1.0"
description = ""
authors = ["mikkegn <michail_gg@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
tenacity = "^8.0.1"
beautifulsoup4 = "^4.10.0"
typer = "^0.4.0"
requests = "^2.27.1"
dateparser = "^1.1.0"
pydantic = "^1.9.0"
piexif = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
autoflake = "^1.4"
isort = "^5.7.0"
unify = "^0.5"
flake8 = "^3.8.4"
pylint = "^2.7.1"
mypy = "^0.812"
pytest-deadfixtures = "^2.2.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
